--- a/src/app/pages/landingpage/landingpage.component.html
+++ b/src/app/pages/landingpage/landingpage.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="flex flex-row bg-gray-200 h-screen w-[100%] section">
-    <h1>cu</h1>
+    <h1>cu do maylon rasgado</h1>
   </div>
 </div>
 
