--- a/src/app/pages/global/sidebar/sidebar.component.html
+++ b/src/app/pages/global/sidebar/sidebar.component.html
@@ -40,7 +40,7 @@
               </a>
             </li>
             <li class="min-w-max">
-              <a href="#" class="group flex items-center space-x-4 rounded-md px-4 py-3 text-gray-600">
+              <a href="/descarte" class="group flex items-center space-x-4 rounded-md px-4 py-3 text-gray-600">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" version="1.0" viewBox="0 0 840.000000 859.000000">
                   <g class="h-5 w-5" transform="translate(0.000000,859.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
                   <path fill-rule="evenodd" class="fill-current text-gray-600 group-hover:fill-purple-900" d="M3213 8540 c-392 -89 -625 -388 -651 -839 l-7 -116 -690 -5 -690 -5 -56 -26 c-103 -49 -172 -140 -188 -248 l-6 -46 -163 -3 -162 -2 0 -324 0 -323 173 -6 c94 -3 1718 -4 3607 -4 l3435 2 3 328 2 327 -164 0 -163 0 -7 48 c-14 104 -94 209 -194 255 -47 22 -54 22 -738 25 l-691 3 -7 97 c-10 129 -30 241 -59 327 -97 283 -286 455 -581 530 l-99 25 -911 -1 c-848 -1 -917 -2 -993 -19z m1761 -650 c141 -21 191 -77 203 -228 l6 -82 -977 0 -976 0 0 23 c1 56 22 161 40 196 23 46 83 79 163 91 80 12 1460 11 1541 0z"/>
