--- a/src/app/pages/userpage/userpage.component.html
+++ b/src/app/pages/userpage/userpage.component.html
@@ -60,11 +60,11 @@
                         </li>
                     </ul>
                 </div>
-                <div class="px-6 py-4">
+                <!-- <div class="px-6 py-4">
                     <h2 class="text-lg font-semibold text-gray-800">Quantidade de Patrimonios ativos por</h2>
                     <p class="mt-2 text-gray-600"></p>
                     <img src="../../../assets/imgs/grafico de teste.png" alt="" width="800px">
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
