api de buscar dados do cnpj - front - gui

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -24,7 +24,7 @@
             <h2 class="font-semibold">Registro</h2>
             <form action="" id="formRegister" (submit)="registerUser()">
                 <div class="form-group" id="cnpjBox">
-                    <label for="text">CNPJ:</label>
+                    <label for="cnpj">CNPJ:</label>
                     <input type="text" name="cnpj" id="cnpj" class="input-login" required>
                 </div>
                 <div class="form-group">
@@ -36,7 +36,7 @@
                     <input type="text" name="password" id="password" class="input-login" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Repita a senha:</label>
+                    <label for="reppassword">Repita a senha:</label>
                     <input type="text" name="reppassword" id="reppassword" class="input-login" required>
                 </div>
                 <button type="submit">Registrar</button>
