--- a/src/app/pages/inventario/filtro/filtro.component.html
+++ b/src/app/pages/inventario/filtro/filtro.component.html
@@ -8,7 +8,7 @@
             <input type="search" placeholder="Pesquisar..." class="bg-gray-200 w-full h-full rounded-full px-2 focus:outline-none">
         </div>
         <!-- Select com opções -->
-        <select class="bg-gray-200 w-44 h-10 rounded-full p-2 whitespace-nowrap focus:outline-none">
+        <select class="bg-gray-200 w-44 h-10 rounded-full p-2 whitespace-nowrap focus:outline-none" >
             <option>Todos</option>
             <option>Tecnologia</option>
             <option>Mobiliário</option>
@@ -25,15 +25,15 @@
     <div class="flex items-center justify-center space-x-4 gap-8 w-[100%]">
         <span class="flex flex-col">
             <span class="font-bold">Nome</span>
-            <select class=" bg-transparente text-gray-700 border-2 border-gray-700 font-medium w-44 h-10 rounded-full p-2 focus:outline-none">
-                <option>Recente</option>
-                <option>A-Z</option>
-                <option>Mais antigo</option>
-            </select>
+            <select [(ngModel)]="nameFilter" (change)="onFilterChange()" class="bg-transparente text-gray-700 border-2 border-gray-700 font-medium w-44 h-10 rounded-full p-2 focus:outline-none">
+                <option *ngFor="let option of nameFilterOptions" [value]="option">{{ option }}</option>
+              </select>
+              
+              
         </span>
         <span class="flex flex-col">
             <span class="font-bold">Status</span>
-            <select class=" bg-transparente text-gray-700 border-2 border-gray-700 font-medium w-44 h-10 rounded-full p-2 focus:outline-none">
+            <select [(ngModel)]="statusFilter" (change)="onFilterChange()" class=" bg-transparente text-gray-700 border-2 border-gray-700 font-medium w-44 h-10 rounded-full p-2 focus:outline-none">
                 <option>Todos</option>
                 <option>Não ativo</option>
                 <option>Ativo</option>
@@ -42,18 +42,19 @@
         
         <span class="flex flex-col">
             <span class="font-bold">Preço</span>
-            <select class="bg-transparente text-gray-700 border-2 border-gray-700 font-medium w-44 h-10 rounded-full p-2 focus:outline-none">
-                <option><$50</option>
-                <option>$51-$100</option>
-                <option>$101-$200</option>
-                <option>$201-$500</option>
-                <option>$501-$1000</option>
-                <option>>$1000</option>
+            <select [(ngModel)]="precoFilter" (change)="onFilterChange()"
+                class="bg-transparente text-gray-700 border-2 border-gray-700 font-medium w-44 h-10 rounded-full p-2 focus:outline-none">
+                <option value="menor que cinquenta"><$50</option>
+                <option value="51 a 100">$51-$100</option>
+                <option value="101 a 200">$101-$200</option>
+                <option value="201 a 500">$201-$500</option>
+                <option value="501 a 4000">$501-$4000</option>
+                <option value="maior que 1000">Maior que $4000</option>
             </select>
         </span>
         <span class="flex flex-col">
             <span class="font-bold">Data de aquisição</span> 
-            <select class="bg-transparente text-gray-700 font-medium border-2 border-gray-700 w-44 h-10 rounded-full p-2 focus:outline-none">
+            <select [(ngModel)]="dataFilter" (change)="onFilterChange()" class="bg-transparente text-gray-700 font-medium border-2 border-gray-700 w-44 h-10 rounded-full p-2 focus:outline-none">
                 <option>Últimos 7 dias</option>
                 <option>Últimos 30 dias</option>
                 <option>Últimos 3 meses</option>
@@ -64,7 +65,7 @@
         </span>
         <span class="flex flex-col">
             <span class="font-bold">Conservação</span>
-            <select class="bg-transparente text-gray-700 font-medium border-2 border-gray-700 w-44 h-10 rounded-full p-2 focus:outline-none">
+            <select  [(ngModel)]="conservacaoFilter" (change)="onFilterChange()" class="bg-transparente text-gray-700 font-medium border-2 border-gray-700 w-44 h-10 rounded-full p-2 focus:outline-none">
                     <option>Novo</option>
                     <option>Excelente</option>
                     <option>Regular</option>
