--- a/src/app/pages/inventario/filtro/filtro.component.html
+++ b/src/app/pages/inventario/filtro/filtro.component.html
@@ -8,15 +8,15 @@
             <input type="search" placeholder="Pesquisar..." class="bg-gray-200 w-full h-full rounded-full px-2 focus:outline-none">
         </div>
         <!-- Select com opções -->
-        <select class="bg-gray-200 w-44 h-10 rounded-full p-2 whitespace-nowrap focus:outline-none" >
-            <option>Todos</option>
-            <option>Tecnologia</option>
-            <option>Mobiliário</option>
-            <option>Industrial</option>
-            <option>Transporte</option>
-            <option>Logística</option>
-            <option>Segurança</option>
-            <option>Labotorial</option>
+        <select class="bg-gray-200 w-44 h-10 rounded-full p-2 whitespace-nowrap focus:outline-none" [(ngModel)]="tipofilter"  (change)="onFilterChange() ">
+            <option value="Todos">Todos</option>
+            <option value="Tecnologia">Tecnologia</option>
+            <option value="Mobiliário">Mobiliário</option>
+            <option value="Industrial">Industrial</option>
+            <option value="Transporte">Transporte</option>
+            <option value="Logística">Logística</option>
+            <option value="Segurança">Segurança</option>
+            <option value="Labotorial">Labotorial</option>
         </select>
 <!-- Botão de adicionar patrimônio -->
 <button id="botao-add" type="button" class="text-white bg-gradient-to-r from-purple-900 via-pink-500 to-orange-500 h-10 rounded-full p-2 whitespace-nowrap transition-all duration-300 hover:from-orange-500 hover:via-pink-500 hover:to-purple-900" (click)="alternarAddPatrimonio()">Adicionar patrimônio</button>
@@ -50,7 +50,7 @@
                 <option value="101 a 200">$101-$200</option>
                 <option value="201 a 500">$201-$500</option>
                 <option value="501 a 4000">$501-$4000</option>
-                <option value="maior que 1000">Maior que $4000</option>
+                <option value="maior que 4000">Maior que $4000</option>
             </select>
         </span>
         <span class="flex flex-col">
