--- a/src/app/pages/descarte/descarte.component.html
+++ b/src/app/pages/descarte/descarte.component.html
@@ -16,7 +16,7 @@
                 <!-- Select com opções -->
                 
         <!-- Botão de adicionar patrimônio -->
-                <button id="botao-add" type="button" class="text-white bg-gradient-to-r from-purple-900 via-pink-500 to-orange-500 h-10 rounded-full p-2 whitespace-nowrap transition-all duration-300 hover:from-orange-500 hover:via-pink-500 hover:to-purple-900" >Adicionar patrimônio</button>
+                <button id="botao-add" type="button" class="text-white bg-gradient-to-r from-purple-900 via-pink-500 to-orange-500 h-10 rounded-full p-2 whitespace-nowrap transition-all duration-300 hover:from-orange-500 hover:via-pink-500 hover:to-purple-900" >Excluir patrimônio</button>
             </div>
             
            
