--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -24,30 +24,35 @@
             <h2 class="font-semibold">Registro</h2>
             <form action="" id="formRegister" (submit)="registerUser()">
                 <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
-                    <div class="form-group" id="cnpjBox">
-                        <label for="cnpj">CNPJ:</label>
-                        <input type="text" name="cnpj" id="cnpjreg" class="input-login" required>
+                <div class="form-group" id="cnpjBox">
+                    <label for="cnpj">CNPJ:</label>
+                    <input type="text" name="cnpj" id="cnpjreg" class="input-login" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email Empresarial:</label>
+                    <input type="text" name="email" id="email" class="input-login" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Senha:</label>
+                    <input type="password" name="password" id="passwordreg" class="input-login" required>
+                    <div class="progress">
+                        <div id="passwordStrength" class="progress-bar" role="progressbar" aria-valuenow="0"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <div class="form-group">
-                        <label for="email">Email Empresarial:</label>
-                        <input type="text" name="email" id="email" class="input-login" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Senha:</label>
-                        <input type="password" name="password" id="passwordreg" class="input-login" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="reppassword">Repita a senha:</label>
-                        <input type="password" name="reppassword" id="reppassword" class="input-login" required>
-                    </div>
-                    <button type="submit">Registrar</button>
-                    <div class="other">
-                        <p>Já tem uma conta?</p>
-                        <p id="linkLogin">Faça o login aqui.</p>
-                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="reppassword">Repita a senha:</label>
+                    <input type="password" name="reppassword" id="reppassword" class="input-login" required>
+                    
+                </div>
+                <button type="submit">Registrar</button>
+                <div class="other">
+                    <p>Já tem uma conta?</p>
+                    <p id="linkLogin">Faça o login aqui.</p>
+                </div>
             </form>
-       </div>
-       
+        </div>
+
 
     </section>
     <section class="container-right">
