--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -45,7 +45,8 @@
                     <input type="password" name="reppassword" id="reppassword" class="input-login" required>
                     
                 </div>
-                <button type="submit">Registrar</button>
+                <button id="btnCadastro" (click)="registerUser()" class="btn btn-primary" disabled>Cadastrar</button>
+
                 <div class="other">
                     <p>Já tem uma conta?</p>
                     <p id="linkLogin">Faça o login aqui.</p>
