--- a/src/app/pages/descarte/descarte.component.html
+++ b/src/app/pages/descarte/descarte.component.html
@@ -11,12 +11,12 @@
                     <svg class="h-4 w-4 ml-4 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.555-4.555M8.486 15.514A6 6 0 1 1 15.514 8.486 6 6 0 0 1 8.486 15.514zM15 15l5 5"/>
                     </svg>
-                    <input type="search" placeholder="Pesquisar..." class="bg-gray-200 w-full h-full rounded-full px-3 focus:outline-none">
+                    <input type="search" [(ngModel)]="searchQuery" placeholder="Pesquisar..." class="bg-gray-200 w-full h-full rounded-full px-3 focus:outline-none"  (keydown.enter)="buscarLocais(searchQuery)">
                 </div>
                 <!-- Select com opções -->
                 
         <!-- Botão de adicionar patrimônio -->
-                <button id="botao-add" type="button" class="text-white bg-gradient-to-r from-purple-900 via-pink-500 to-orange-500 h-10 rounded-full p-2 whitespace-nowrap transition-all duration-300 hover:from-orange-500 hover:via-pink-500 hover:to-purple-900" >Excluir patrimônio</button>
+                <button id="botao-add" type="button" class="text-white bg-gradient-to-r from-purple-900 via-pink-500 to-orange-500 h-10 rounded-full p-2 whitespace-nowrap transition-all duration-300 hover:from-orange-500 hover:via-pink-500 hover:to-purple-900" (click)="buscarLocais(searchQuery)">Procurar Descarte</button>
             </div>
             
            
@@ -29,37 +29,36 @@
         <table class="table-auto w-[98%] mx-auto divide-y divide-gray-200">
           <thead class="bg-gray-50">
             <tr>
-              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider">Nome</th>
-              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider">Localização</th>
-              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider" id="contato">Contato</th>
-              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider"  id="site">Website</th>
-              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider" id="url">URL</th>
+              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5">Nome</th>
+              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5">Localização</th>
+              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5" id="contato">Contato</th>
+              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5" id="site">Website</th>
+              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5" id="url">URL</th>
             </tr>
           </thead>
-          <tbody class="bg-white divide-y divide-gray-200 transition-colors hover:bg-gray-300">
+          <tbody class="bg-white divide-y divide-gray-200 transition-colors">
             <!-- Row 1 -->
-            <tr>
-              
-              <td class="px-6 py-4 whitespace-nowrap">
-                <div class="text-sm text-gray-900">Nome do item</div>
+            <tr *ngFor="let local of localizacoes" class="hover:bg-gray-300">
+              <td class="px-6 py-4 whitespace-nowrap w-1/5">
+                <div class="text-sm text-gray-900">{{local.nome}}</div>
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                Localização
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 w-1/5">
+                {{local.localizacao}}
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500" id="contato">
-                991840288
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 w-1/5" id="contato">
+                {{local.contato}}
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500" id="site">
-                www.sitedescarte.com
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 w-1/5" id="site">
+                {{local.website}}
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500" id="url">
-                google maps url
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 w-1/5" id="url">
+                {{local.url}}
               </td>
-              
             </tr>
-            <!-- Row 2, 3, ... -->
+            <!-- Additional rows here -->
           </tbody>
         </table>
+        
       </div>
       </div>
   </body>
