--- a/src/app/pages/descarte/descarte.component.html
+++ b/src/app/pages/descarte/descarte.component.html
@@ -7,7 +7,7 @@
         <div class="bg-white rounded-lg w-[98%] p-6 shadow-md mx-auto overflow-hidden">
             <div class="flex items-center space-x-4">
                 <!-- Barra de pesquisa com ícone -->
-                <div class="flex items-center bg-gray-200 w-[75%] h-10 rounded-full px-1">
+                <div class="flex items-center bg-gray-200 w-[90%] h-10 rounded-full px-1">
                     <svg class="h-4 w-4 ml-4 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.555-4.555M8.486 15.514A6 6 0 1 1 15.514 8.486 6 6 0 0 1 8.486 15.514zM15 15l5 5"/>
                     </svg>
@@ -30,10 +30,10 @@
           <thead class="bg-gray-50">
             <tr>
               <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5">Nome</th>
-              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5">Localização</th>
+              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5">Endereço</th>
               <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5" id="contato">Contato</th>
               <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5" id="site">Website</th>
-              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5" id="url">URL</th>
+              <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider w-1/5" id="url">Localização</th>
             </tr>
           </thead>
           <tbody class="bg-white divide-y divide-gray-200 transition-colors">
@@ -49,10 +49,10 @@
                 {{local.contato}}
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 w-1/5" id="site">
-                {{local.website}}
+                <a href="{{local.website}}" target="_blank">{{local.website.substring(0, 20)}}</a>
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 w-1/5" id="url">
-                {{local.url}}
+                <a href="{{local.url}}" target="_blank"><button>Ir para o Local</button></a>
               </td>
             </tr>
             <!-- Additional rows here -->
