--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,12 @@
-<body class="flex bg-gray-100 h-max">
-    <sidebar class="sidebar"></sidebar>  <!-- SIDEBAR -->
+<body class="flex bg-gray-100 h-screen justify-center items-start">
+    <sidebar class="sidebar"></sidebar> <!-- SIDEBAR -->
     <div class="flex flex-col flex-1">
-        <header-global></header-global>
-        <div class="flex flex-col items-center justify-center m-auto">
-            <h1 class="font-bold text-5xl">Bem-vindo ao Patrify</h1>
-            <p class>Seu gerenciador de patrimônios físicos</p>
-        </div>
+        <header class="bg-white shadow-md py-4 px-6 mb-4 flex justify-between items-center">
+            <h1 class="text-2xl font-semibold" id="titulo-header">{{ currentRoute }}</h1>
+            <div class="text-center"> <!-- Centraliza o conteúdo do texto -->
+                <h1 class="text-2xl font-semibold" >  |  Bem-vindo ao Patrify  |  </h1> mes de maio
+                <p class="text-2xl font-semibold" >  |  Seu gerenciador de patrimônios físicos  |  </p>
+            </div>
+        </header>
     </div>
 </body>
