--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -21,8 +21,8 @@
           <tr *ngFor="let patrimonio of patrimonios" class="hover:bg-gray-300">
             <td class="px-6 py-4 whitespace-nowrap">
               <div class="flex items-center">
-                <div class="flex-shrink-0 h-10 w-20">
-                  <img [src]="patrimonio.imageSrc" alt="" >
+                <div class="flex-shrink-0 h-10 w-20 imagem">
+                  <img [src]="patrimonio.imageSrc" alt="" class="patr_img">
                 </div>
               </div>
             </td>
