--- a/src/app/pages/inventario/filtro/filtro.component.html
+++ b/src/app/pages/inventario/filtro/filtro.component.html
@@ -35,7 +35,7 @@
             <span class="font-bold">Status</span>
             <select [(ngModel)]="statusFilter" (change)="onFilterChange()" class=" bg-transparente text-gray-700 border-2 border-gray-700 font-medium w-44 h-10 rounded-full p-2 focus:outline-none">
                 <option>Todos</option>
-                <option>Não ativo</option>
+                <option>Inativo</option>
                 <option>Ativo</option>
             </select>
         </span>
