--- a/src/app/pages/landingpage/landingpage.component.html
+++ b/src/app/pages/landingpage/landingpage.component.html
@@ -1,14 +1,7 @@
 <div class="wallpaper flex items-center overflow-hidden">
   <div class="heroLeft flex justify-center items-center flex-col">
-    <h1 class="font-semibold text-9xl text-white">Patrify.</h1>
-    <p class="text-white text-[28px] relative right-[54px] bottom-4">Gestão de Bens e Ativos</p>
-    <button type="button" class="text-black bg-white hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 relative top-2">
-      <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-      </svg>
-      <span class="sr-only">Icon description</span>
-      </button>
+    <h1 class="font-semibold text-9xl text-white">Patrify</h1>
+    <p class="text-white text-[28px] relative right-[38px] bottom-4 text-nowrap">Gestão de Bens e Ativos</p>
+    <button (click)="login()">Login/Registro</button>
   </div>
-  <div class="heroRight flex justify-end items-center flex-col">
-  </div>
-</div>
+</div>                        
