--- a/src/app/pages/landingpage/landingpage.component.scss
+++ b/src/app/pages/landingpage/landingpage.component.scss
@@ -9,10 +9,71 @@
     .heroLeft {
         width: 50vw;
         height: 100%;
+        font-size: 8rem;
     }
 
-    .heroRight {
-        width: 50vw;
-        height: 100%;
+    button {
+        background-color: white;
+        text-align: center;
+        border-radius: 2rem;
+        font-size: 20px;   
+        width: 16rem;
+        height: 4rem;        
+        padding: 6px; 
+        transition: background-color 0.2s ease;
+        
+        &:hover {
+            background-color: #c5c5c5;
+            color: purple;
+        }
+    }
+}
+
+@media screen and (max-width: 648px) {
+    .wallpaper {
+        background: rgb(66,11,115);
+        background: linear-gradient(45deg, rgba(66,11,115,1) 0%, rgba(128,11,128,1) 15%, rgba(206,26,115,1) 30%, rgba(234,48,95,1) 45%, rgba(254,68,79,1) 60%, rgba(254,110,50,1) 75%, rgba(255,111,50,1) 90%);
+        justify-content: center;   
+        
+        .heroLeft {
+            width: 100vw;
+
+            h1 {
+                font-size: 75px;
+            }
+
+            p {
+                font-size: 17px;
+                left: -20px;
+                top: -10px;
+            }
+
+            button {
+                background-color: white;
+                text-align: center;
+                border-radius: 2rem;
+                font-size: 18px;   
+                width: 10rem;
+                height: auto;        
+                padding: 6px; 
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 649px) and (max-width: 768px)  {
+    .wallpaper {
+        background-position: right 0% bottom 50%;
+        justify-content: center;
+
+        button {
+            background-color: white;
+            text-align: center;
+            border-radius: 2rem;
+            font-size: 18px;   
+            width: 10rem;
+            height: 4rem;        
+            padding: 6px; 
+        }
     }
 }
