hero page in progress

--- a/src/app/pages/landingpage/landingpage.component.html
+++ b/src/app/pages/landingpage/landingpage.component.html
@@ -1,7 +1,17 @@
+<body>
 <div class="wallpaper flex items-center overflow-hidden">
   <div class="heroLeft flex justify-center items-center flex-col">
     <h1 class="font-semibold text-9xl text-white">Patrify</h1>
     <p class="text-white text-[28px] relative right-[38px] bottom-4 text-nowrap">Gestão de Bens e Ativos</p>
     <button (click)="login()">Login/Registro</button>
   </div>
-</div>                        
+</div>     
+<div class="contentOne">
+  <div class="contentOne-left">
+    <h1 class="font-bold">APLICAÇÃO</h1>
+  </div>
+  <div class="contentOne-right">
+    <p>Patrify é um gestor de bens e ativos que facilita a adição e organização de patrimônios em empresas. Com uma interface intuitiva, permite gerar números de série únicos e criar QR codes, oferecendo uma solução prática para o controle eficiente de ativos.</p>
+  </div>
+</div>     
+</body>              
