--- a/src/app/pages/landingpage/landingpage.component.scss
+++ b/src/app/pages/landingpage/landingpage.component.scss
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 .wallpaper {
     background-image: url('../../../assets/imgs/landingWllp.jpg');
     width: 100vw;
@@ -29,10 +33,50 @@
     }
 }
 
+.contentOne {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 50vh;
+    
+    .contentOne-left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        height: 100%;
+        background: #d6d6d6;
+        font-size: 100px;
+        
+        h1 {
+            background-clip: text;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		color: white;
+		background-image: linear-gradient(to right top, #4c1084, #740686, #970086, #b60084, #e0116c, #fb4250, #ff7131, #ff9e00);
+        }
+    }
+
+    .contentOne-right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        height: 100%;
+        font-size: 28px;
+        padding: 1rem;
+        background-color: #300030;
+        color: #f5174e;
+    }
+}
+
 @media screen and (max-width: 648px) {
     .wallpaper {
         background: rgb(66,11,115);
-        background: linear-gradient(45deg, rgba(66,11,115,1) 0%, rgba(128,11,128,1) 15%, rgba(206,26,115,1) 30%, rgba(234,48,95,1) 45%, rgba(254,68,79,1) 60%, rgba(254,110,50,1) 75%, rgba(255,111,50,1) 90%);
+        background: linear-gradient(45deg, #420b73 0%, #800b80 15%, #ce1a73 30%, #ea305f 45%, #fe444f 60%, #fe6e32 75%, #ff6f32 90%);
         justify-content: center;   
         
         .heroLeft {
@@ -59,6 +103,20 @@
             }
         }
     }
+
+    .contentOne {
+        flex-direction: column;
+
+        .contentOne-left {
+            width: 100vw;
+            font-size: 40px;
+        }
+
+        .contentOne-right {
+            width: 100vw;
+            font-size: 14px;
+        }
+    }
 }
 
 @media screen and (min-width: 649px) and (max-width: 768px)  {
@@ -74,6 +132,31 @@
             width: 10rem;
             height: 4rem;        
             padding: 6px; 
+        }
+    }
+
+    
+    .contentOne {
+
+        .contentOne-left {
+            font-size: 50px;
+        }
+
+        .contentOne-right {
+            font-size: 20px;
+        }
+    }
+}
+
+@media screen and (min-width: 769px ) and (max-width: 1439px) {
+    .contentOne {
+
+        .contentOne-left {
+            font-size: 64px;
+        }
+
+        .contentOne-right {
+            font-size: 20px;
         }
     }
 }
