--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,7 +12,7 @@
                     <label for="password">Senha:</label>
                     <input type="text" name="password" id="password" class="input-login" required>
                 </div>
-                <p id="forgotPassword" (click)="fazerLogin()">Esqueci a Senha</p>
+                <a id="forgotPassword" href="/senha">Esqueci a Senha</a>
                 <button type="submit">Entrar</button>
                 <div class="other">
                     <p>Não tem uma conta?</p>
